# treeutils

./: LICENSE  README.md  pyproject.toml
test/: test_pytorch_pytree.py  test_pytree.py
treeutils/: __init__.py  core.py  default_nodes.py  pytorch_nodes.py
